<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.RegistrarProducto">

    <Button
        android:id="@+id/btRegistrar_Registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ptRegistrar_STOCK_in"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btRegistrar_Registrar" />

    <EditText
        android:id="@+id/ptRegistrar_STOCK_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegistrar_STOCK_out"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ptRegistrar_PRECIO_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegistrar_PRECIO_out"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"

        android:textSize="14sp" />

    <EditText
        android:id="@+id/ptRegistrar_NOMBRE_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegistrar_NOMBRE_out"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvRegistrar_STOCK_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ptRegistrar_PRECIO_in"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tvRegistrar_STOCK_out"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvRegistrar_PRECIO_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ptRegistrar_NOMBRE_in"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tvRegistrar_PRECIO_out"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvRegistrar_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tvRegistrar_Titulo"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRegistrar_NOMBRE_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegistrar_Titulo"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tvRegistrar_NOMBRE_out"
        android:textColor="@android:color/black" />

</RelativeLayout>